@@ -58,15 +58,36 @@ be started and show the sizes for the task. Use "cancel pending actions" to
 clear the slate, quit aptitude and repeat for other tasks.
 Space requirements need to be determined from tasksel as tasksel will not
 install recommended packages while selecting a task from aptitude will.
+
+To get the sizes for the alternative desktop environments you will need
+to first switch tasksel to that DE using the following command, e.g:
+   echo "tasksel tasksel/desktop string kde" | debconf-set-selections
 -->
 
 <!-- Size of the basic installation -->
   <!ENTITY base-system-size   "250">
   <!ENTITY std-system-size    "397">
-<!-- Desktop environment task -->
+<!-- Desktop environment task
+     (obsolete; can be removed when all translations have been updated) -->
   <!ENTITY task-desktop-inst "1830">
   <!ENTITY task-desktop-dl    "703">
   <!ENTITY task-desktop-tot  "2533">
+<!-- Desktop environment task - GNOME -->
+  <!ENTITY task-desktop-gnome-inst "1830">
+  <!ENTITY task-desktop-gnome-dl    "703">
+  <!ENTITY task-desktop-gnome-tot  "2533">
+<!-- Desktop environment task - KDE -->
+  <!ENTITY task-desktop-kde-inst   "1592">
+  <!ENTITY task-desktop-kde-dl      "613">
+  <!ENTITY task-desktop-kde-tot    "2205">
+<!-- Desktop environment task - Xfce -->
+  <!ENTITY task-desktop-xfce-inst  "1056">
+  <!ENTITY task-desktop-xfce-dl     "403">
+  <!ENTITY task-desktop-xfce-tot   "1459">
+<!-- Desktop environment task - LXDE -->
+  <!ENTITY task-desktop-lxde-inst   "963">
+  <!ENTITY task-desktop-lxde-dl     "370">
+  <!ENTITY task-desktop-lxde-tot   "1333">
 <!-- Laptop task -->
   <!ENTITY task-laptop-inst    "26">
   <!ENTITY task-laptop-dl       "9">
